Add Meta callback urls

--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ META_APP_SECRET=your_app_secret
 META_PAGE_ACCESS_TOKEN=your_page_access_token
 META_PAGE_ID=your_page_id
 META_IG_USER_ID=your_instagram_user_id
-META_WEBHOOK_VERIFY_TOKEN=your_webhook_verify_token
+META_WEBHOOK_VERIFY_TOKEN=1H94NdfjrEcAYG895j$v
 
 # Discord (Midjourney)
 DISCORD_BOT_TOKEN=your_bot_token
