Implemented meta completely

--- a/.env.example
+++ b/.env.example
@@ -41,6 +41,8 @@ CRON_TREND_ANALYSIS=0 3 * * *
 CRON_CONTENT_GENERATION=15 3 * * *
 CRON_POSTING=0 17 * * *
 CRON_WEEKLY_ANALYTICS=0 0 * * 0
+CRON_AUTO_REPLY=*/5 * * * *
+CRON_POSTING_CHECK=*/5 * * * *
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=3600000
